src/views/chat/components/message/themes.less
.markdown-body {
	background-color: transparent;
	font-size: 14px;

	// mac
	.highlight pre,
	pre {
		position: relative;
		overflow: hidden;
		border-radius: 10px;
		background: transparent;
		box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.4);

		&:hover {
			transition: box-shadow 0.3s ease-in-out;
			box-shadow: 0 0px 30px 0px rgba(0, 0, 0, 0.4);
		}

		&::before {
			height: 28px;
			line-height: 38px;
			background: #1c1c1c;
			color: #eeffff;
			font-size: 16px;
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			font-weight: bold;
		}

		&::after {
			content: '';
			position: absolute;
			border-radius: 50%;
			background: #fc625d;
			width: 12px;
			height: 12px;
			top: 0;
			left: 5px;
			margin-top: 5px;
			box-shadow: 20px 0px #fdbc40, 40px 0px #35cd4b;
			z-index: 10;
		}
	}
	.clipboard {
		top: -12px;
		cursor: pointer;
		color: #7f7fd5;
		position: relative;
		float: right;
		padding: 2px;
	}
}

.dark {
	/*!
  Theme: GitHub Dark Dimmed
  Description: Dark dimmed theme as seen on github.com
  Author: github.com
  Maintainer: @Hirse
  Updated: 2021-05-15

  Colors taken from GitHub's CSS
*/

	.hljs {
		color: #adbac7;
		// background: #22272e;
	}

	.hljs-doctag,
	.hljs-keyword,
	.hljs-meta .hljs-keyword,
	.hljs-template-tag,
	.hljs-template-variable,
	.hljs-type,
	.hljs-variable.language_ {
		/* prettylights-syntax-keyword */
		color: #f47067;
	}

	.hljs-title,
	.hljs-title.class_,
	.hljs-title.class_.inherited__,
	.hljs-title.function_ {
		/* prettylights-syntax-entity */
		color: #dcbdfb;
	}

	.hljs-attr,
	.hljs-attribute,
	.hljs-literal,
	.hljs-meta,
	.hljs-number,
	.hljs-operator,
	.hljs-variable,
	.hljs-selector-attr,
	.hljs-selector-class,
	.hljs-selector-id {
		/* prettylights-syntax-constant */
		color: #6cb6ff;
	}

	.hljs-regexp,
	.hljs-string,
	.hljs-meta .hljs-string {
		/* prettylights-syntax-string */
		color: #96d0ff;
	}

	.hljs-built_in,
	.hljs-symbol {
		/* prettylights-syntax-variable */
		color: #f69d50;
	}

	.hljs-comment,
	.hljs-code,
	.hljs-formula {
		/* prettylights-syntax-comment */
		color: #768390;
	}

	.hljs-name,
	.hljs-quote,
	.hljs-selector-tag,
	.hljs-selector-pseudo {
		/* prettylights-syntax-entity-tag */
		color: #8ddb8c;
	}

	.hljs-subst {
		/* prettylights-syntax-storage-modifier-import */
		color: #adbac7;
	}

	.hljs-section {
		/* prettylights-syntax-markup-heading */
		color: #316dca;
		font-weight: bold;
	}

	.hljs-bullet {
		/* prettylights-syntax-markup-list */
		color: #eac55f;
	}

	.hljs-emphasis {
		/* prettylights-syntax-markup-italic */
		color: #adbac7;
		font-style: italic;
	}

	.hljs-strong {
		/* prettylights-syntax-markup-bold */
		color: #adbac7;
		font-weight: bold;
	}

	.hljs-addition {
		/* prettylights-syntax-markup-inserted */
		color: #b4f1b4;
		background-color: #1b4721;
	}

	.hljs-deletion {
		/* prettylights-syntax-markup-deleted */
		color: #ffd8d3;
		background-color: #78191b;
	}

	.hljs-char.escape_,
	.hljs-link,
	.hljs-params,
	.hljs-property,
	.hljs-punctuation,
	.hljs-tag {
		/* purposely ignored */
	}
}

.light {
	/*!
  Theme: GitHub
  Description: Light theme as seen on github.com
  Author: github.com
  Maintainer: @Hirse
  Updated: 2021-05-15

  Outdated base version: https://github.com/primer/github-syntax-light
  Current colors taken from GitHub's CSS
*/

	.hljs {
		color: #24292e;
		// background: #ffffff;
	}

	.hljs-doctag,
	.hljs-keyword,
	.hljs-meta .hljs-keyword,
	.hljs-template-tag,
	.hljs-template-variable,
	.hljs-type,
	.hljs-variable.language_ {
		/* prettylights-syntax-keyword */
		color: #d73a49;
	}

	.hljs-title,
	.hljs-title.class_,
	.hljs-title.class_.inherited__,
	.hljs-title.function_ {
		/* prettylights-syntax-entity */
		color: #6f42c1;
	}

	.hljs-attr,
	.hljs-attribute,
	.hljs-literal,
	.hljs-meta,
	.hljs-number,
	.hljs-operator,
	.hljs-variable,
	.hljs-selector-attr,
	.hljs-selector-class,
	.hljs-selector-id {
		/* prettylights-syntax-constant */
		color: #005cc5;
	}

	.hljs-regexp,
	.hljs-string,
	.hljs-meta .hljs-string {
		/* prettylights-syntax-string */
		color: #032f62;
	}

	.hljs-built_in,
	.hljs-symbol {
		/* prettylights-syntax-variable */
		color: #e36209;
	}

	.hljs-comment,
	.hljs-code,
	.hljs-formula {
		/* prettylights-syntax-comment */
		color: #6a737d;
	}

	.hljs-name,
	.hljs-quote,
	.hljs-selector-tag,
	.hljs-selector-pseudo {
		/* prettylights-syntax-entity-tag */
		color: #22863a;
	}

	.hljs-subst {
		/* prettylights-syntax-storage-modifier-import */
		color: #24292e;
	}

	.hljs-section {
		/* prettylights-syntax-markup-heading */
		color: #005cc5;
		font-weight: bold;
	}

	.hljs-bullet {
		/* prettylights-syntax-markup-list */
		color: #735c0f;
	}

	.hljs-emphasis {
		/* prettylights-syntax-markup-italic */
		color: #24292e;
		font-style: italic;
	}

	.hljs-strong {
		/* prettylights-syntax-markup-bold */
		color: #24292e;
		font-weight: bold;
	}

	.hljs-addition {
		/* prettylights-syntax-markup-inserted */
		color: #22863a;
		background-color: #f0fff4;
	}

	.hljs-deletion {
		/* prettylights-syntax-markup-deleted */
		color: #b31d28;
		background-color: #ffeef0;
	}

	.hljs-char.escape_,
	.hljs-link,
	.hljs-params,
	.hljs-property,
	.hljs-punctuation,
	.hljs-tag {
		/* purposely ignored */
	}
}

